<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mnopi Dummy Application</string>
    <string name="url">Url</string>
    <string name="html_text_default">Html code</string>
    <string name="send_search">Send search</string>
    <string name="send_page_visited">Send page visited</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_mnopi_browser">Go to Mnopi Browser</string>
    <string name="open_url">Go!</string>

</resources>
